# resources/enum_types.go
@@ -8,8 +8,7 @@ const (
 	DistributorBlockType       = "distributor_block"
 	CreateDistributorBlockType = "create_distributor_block"
 
-	EmployeeType       = "employee"
-	UpdateEmployeeType = "update_employee"
+	EmployeeType = "employee"
 
 	EmployeeInviteType       = "employee_invite"
 	CreateEmployeeInviteType = "create_employee_invite"
