# resources/model_update_employee.go
@@ -1,158 +1,0 @@
-/*
-Cifra SSO REST API
-
-SSO REST API for Cifra app
-
-API version: 0.0.1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the UpdateEmployee type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateEmployee{}
-
-// UpdateEmployee struct for UpdateEmployee
-type UpdateEmployee struct {
-	Data UpdateEmployeeData `json:"data"`
-}
-
-type _UpdateEmployee UpdateEmployee
-
-// NewUpdateEmployee instantiates a new UpdateEmployee object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateEmployee(data UpdateEmployeeData) *UpdateEmployee {
-	this := UpdateEmployee{}
-	this.Data = data
-	return &this
-}
-
-// NewUpdateEmployeeWithDefaults instantiates a new UpdateEmployee object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateEmployeeWithDefaults() *UpdateEmployee {
-	this := UpdateEmployee{}
-	return &this
-}
-
-// GetData returns the Data field value
-func (o *UpdateEmployee) GetData() UpdateEmployeeData {
-	if o == nil {
-		var ret UpdateEmployeeData
-		return ret
-	}
-
-	return o.Data
-}
-
-// GetDataOk returns a tuple with the Data field value
-// and a boolean to check if the value has been set.
-func (o *UpdateEmployee) GetDataOk() (*UpdateEmployeeData, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Data, true
-}
-
-// SetData sets field value
-func (o *UpdateEmployee) SetData(v UpdateEmployeeData) {
-	o.Data = v
-}
-
-func (o UpdateEmployee) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateEmployee) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["data"] = o.Data
-	return toSerialize, nil
-}
-
-func (o *UpdateEmployee) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"data",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varUpdateEmployee := _UpdateEmployee{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varUpdateEmployee)
-
-	if err != nil {
-		return err
-	}
-
-	*o = UpdateEmployee(varUpdateEmployee)
-
-	return err
-}
-
-type NullableUpdateEmployee struct {
-	value *UpdateEmployee
-	isSet bool
-}
-
-func (v NullableUpdateEmployee) Get() *UpdateEmployee {
-	return v.value
-}
-
-func (v *NullableUpdateEmployee) Set(val *UpdateEmployee) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateEmployee) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateEmployee) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateEmployee(val *UpdateEmployee) *NullableUpdateEmployee {
-	return &NullableUpdateEmployee{value: val, isSet: true}
-}
-
-func (v NullableUpdateEmployee) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateEmployee) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
