# resources/model_update_employee_data.go
@@ -1,215 +1,0 @@
-/*
-Cifra SSO REST API
-
-SSO REST API for Cifra app
-
-API version: 0.0.1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the UpdateEmployeeData type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateEmployeeData{}
-
-// UpdateEmployeeData struct for UpdateEmployeeData
-type UpdateEmployeeData struct {
-	// The UUID of the employee to be updated.
-	Id string `json:"id"`
-	Type string `json:"type"`
-	Attributes UpdateEmployeeDataAttributes `json:"attributes"`
-}
-
-type _UpdateEmployeeData UpdateEmployeeData
-
-// NewUpdateEmployeeData instantiates a new UpdateEmployeeData object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateEmployeeData(id string, type_ string, attributes UpdateEmployeeDataAttributes) *UpdateEmployeeData {
-	this := UpdateEmployeeData{}
-	this.Id = id
-	this.Type = type_
-	this.Attributes = attributes
-	return &this
-}
-
-// NewUpdateEmployeeDataWithDefaults instantiates a new UpdateEmployeeData object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateEmployeeDataWithDefaults() *UpdateEmployeeData {
-	this := UpdateEmployeeData{}
-	return &this
-}
-
-// GetId returns the Id field value
-func (o *UpdateEmployeeData) GetId() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Id
-}
-
-// GetIdOk returns a tuple with the Id field value
-// and a boolean to check if the value has been set.
-func (o *UpdateEmployeeData) GetIdOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Id, true
-}
-
-// SetId sets field value
-func (o *UpdateEmployeeData) SetId(v string) {
-	o.Id = v
-}
-
-// GetType returns the Type field value
-func (o *UpdateEmployeeData) GetType() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Type
-}
-
-// GetTypeOk returns a tuple with the Type field value
-// and a boolean to check if the value has been set.
-func (o *UpdateEmployeeData) GetTypeOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Type, true
-}
-
-// SetType sets field value
-func (o *UpdateEmployeeData) SetType(v string) {
-	o.Type = v
-}
-
-// GetAttributes returns the Attributes field value
-func (o *UpdateEmployeeData) GetAttributes() UpdateEmployeeDataAttributes {
-	if o == nil {
-		var ret UpdateEmployeeDataAttributes
-		return ret
-	}
-
-	return o.Attributes
-}
-
-// GetAttributesOk returns a tuple with the Attributes field value
-// and a boolean to check if the value has been set.
-func (o *UpdateEmployeeData) GetAttributesOk() (*UpdateEmployeeDataAttributes, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Attributes, true
-}
-
-// SetAttributes sets field value
-func (o *UpdateEmployeeData) SetAttributes(v UpdateEmployeeDataAttributes) {
-	o.Attributes = v
-}
-
-func (o UpdateEmployeeData) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateEmployeeData) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["id"] = o.Id
-	toSerialize["type"] = o.Type
-	toSerialize["attributes"] = o.Attributes
-	return toSerialize, nil
-}
-
-func (o *UpdateEmployeeData) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"id",
-		"type",
-		"attributes",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varUpdateEmployeeData := _UpdateEmployeeData{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varUpdateEmployeeData)
-
-	if err != nil {
-		return err
-	}
-
-	*o = UpdateEmployeeData(varUpdateEmployeeData)
-
-	return err
-}
-
-type NullableUpdateEmployeeData struct {
-	value *UpdateEmployeeData
-	isSet bool
-}
-
-func (v NullableUpdateEmployeeData) Get() *UpdateEmployeeData {
-	return v.value
-}
-
-func (v *NullableUpdateEmployeeData) Set(val *UpdateEmployeeData) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateEmployeeData) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateEmployeeData) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateEmployeeData(val *UpdateEmployeeData) *NullableUpdateEmployeeData {
-	return &NullableUpdateEmployeeData{value: val, isSet: true}
-}
-
-func (v NullableUpdateEmployeeData) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateEmployeeData) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
