# resources/model_update_employee_data_attributes.go
@@ -1,159 +1,0 @@
-/*
-Cifra SSO REST API
-
-SSO REST API for Cifra app
-
-API version: 0.0.1
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package resources
-
-import (
-	"encoding/json"
-	"bytes"
-	"fmt"
-)
-
-// checks if the UpdateEmployeeDataAttributes type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &UpdateEmployeeDataAttributes{}
-
-// UpdateEmployeeDataAttributes struct for UpdateEmployeeDataAttributes
-type UpdateEmployeeDataAttributes struct {
-	// The role of the employee within the distributor's organization (e.g., manager, staff).
-	Role string `json:"role"`
-}
-
-type _UpdateEmployeeDataAttributes UpdateEmployeeDataAttributes
-
-// NewUpdateEmployeeDataAttributes instantiates a new UpdateEmployeeDataAttributes object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewUpdateEmployeeDataAttributes(role string) *UpdateEmployeeDataAttributes {
-	this := UpdateEmployeeDataAttributes{}
-	this.Role = role
-	return &this
-}
-
-// NewUpdateEmployeeDataAttributesWithDefaults instantiates a new UpdateEmployeeDataAttributes object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewUpdateEmployeeDataAttributesWithDefaults() *UpdateEmployeeDataAttributes {
-	this := UpdateEmployeeDataAttributes{}
-	return &this
-}
-
-// GetRole returns the Role field value
-func (o *UpdateEmployeeDataAttributes) GetRole() string {
-	if o == nil {
-		var ret string
-		return ret
-	}
-
-	return o.Role
-}
-
-// GetRoleOk returns a tuple with the Role field value
-// and a boolean to check if the value has been set.
-func (o *UpdateEmployeeDataAttributes) GetRoleOk() (*string, bool) {
-	if o == nil {
-		return nil, false
-	}
-	return &o.Role, true
-}
-
-// SetRole sets field value
-func (o *UpdateEmployeeDataAttributes) SetRole(v string) {
-	o.Role = v
-}
-
-func (o UpdateEmployeeDataAttributes) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o UpdateEmployeeDataAttributes) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	toSerialize["role"] = o.Role
-	return toSerialize, nil
-}
-
-func (o *UpdateEmployeeDataAttributes) UnmarshalJSON(data []byte) (err error) {
-	// This validates that all required properties are included in the JSON object
-	// by unmarshalling the object into a generic map with string keys and checking
-	// that every required field exists as a key in the generic map.
-	requiredProperties := []string{
-		"role",
-	}
-
-	allProperties := make(map[string]interface{})
-
-	err = json.Unmarshal(data, &allProperties)
-
-	if err != nil {
-		return err;
-	}
-
-	for _, requiredProperty := range(requiredProperties) {
-		if _, exists := allProperties[requiredProperty]; !exists {
-			return fmt.Errorf("no value given for required property %v", requiredProperty)
-		}
-	}
-
-	varUpdateEmployeeDataAttributes := _UpdateEmployeeDataAttributes{}
-
-	decoder := json.NewDecoder(bytes.NewReader(data))
-	decoder.DisallowUnknownFields()
-	err = decoder.Decode(&varUpdateEmployeeDataAttributes)
-
-	if err != nil {
-		return err
-	}
-
-	*o = UpdateEmployeeDataAttributes(varUpdateEmployeeDataAttributes)
-
-	return err
-}
-
-type NullableUpdateEmployeeDataAttributes struct {
-	value *UpdateEmployeeDataAttributes
-	isSet bool
-}
-
-func (v NullableUpdateEmployeeDataAttributes) Get() *UpdateEmployeeDataAttributes {
-	return v.value
-}
-
-func (v *NullableUpdateEmployeeDataAttributes) Set(val *UpdateEmployeeDataAttributes) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableUpdateEmployeeDataAttributes) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableUpdateEmployeeDataAttributes) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableUpdateEmployeeDataAttributes(val *UpdateEmployeeDataAttributes) *NullableUpdateEmployeeDataAttributes {
-	return &NullableUpdateEmployeeDataAttributes{value: val, isSet: true}
-}
-
-func (v NullableUpdateEmployeeDataAttributes) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableUpdateEmployeeDataAttributes) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
